crates/stylex-transform/tests/transform_stylex_define_consts_test/snapshots/transform__transform_stylex_define_consts_test__define_consts_in_stylex_create__adds_nested_media_query_placeholders_from_constants_stylex.snap
---
source: crates/stylex-transform/tests/transform_stylex_define_consts_test/define_consts_in_stylex_create.rs
expression: output
---
import * as stylex from '@stylexjs/stylex';
import { breakpoints, colors } from './constants.stylex';
export const styles = {
    root: {
        kMwMTN: "x1mqxbix x1lics7d xoa8roh",
        $$css: true
    }
};
