crates/stylex-transform/tests/transform_stylex_define_consts_test/snapshots/transform__transform_stylex_define_consts_test__define_consts_in_stylex_create__adds_placeholder_for_constant_value_from_constants_stylex.snap
---
source: crates/stylex-transform/tests/transform_stylex_define_consts_test/define_consts_in_stylex_create.rs
expression: output
---
import * as stylex from '@stylexjs/stylex';
import { colors } from './constants.stylex';
export const styles = {
    root: {
        kWkggS: "xtkzszc",
        $$css: true
    }
};
