crates/stylex-transform/tests/transform_stylex_define_consts_test/snapshots/transform__transform_stylex_define_consts_test__define_consts_in_stylex_create__works_with_dynamic_styles_at_rules.snap
---
source: crates/stylex-transform/tests/transform_stylex_define_consts_test/define_consts_in_stylex_create.rs
expression: output
---
import * as stylex from '@stylexjs/stylex';
import { breakpoints } from './constants.stylex';
export const styles = {
    node: (color)=>[
            {
                kMwMTN: "x1pitq50 " + (color != null ? "x3d248p" : color),
                $$css: true
            },
            {
                "--x-4xs81a": color != null ? color : undefined
            }
        ]
};
